# ai-workflow-editor

./: .gitignore  CLAUDE.md
.github/workflows/: ci.yml
ai-workflow-editor/: CMakeLists.txt
ai-workflow-editor/docs/: 2026-04-21-ai-workflow-editor-design.md  2026-04-22-claude-code-handoff.md  README.md  user-guide.md
ai-workflow-editor/docs/plans/: 2026-04-21-ai-workflow-editor-implementation-plan.md  2026-04-22-next-development-plan.md  2026-04-23-beta-usability-priority-plan.md
ai-workflow-editor/docs/superpowers/plans/: 2026-04-22-toolbar-refresh.md  2026-04-25-document-diagnostics-export-preflight.md  2026-04-25-global-validation-problems-panel.md  2026-04-25-run-preview.md
ai-workflow-editor/docs/superpowers/specs/: 2026-04-22-toolbar-refresh-design.md
ai-workflow-editor/src/: main.cpp
ai-workflow-editor/src/app/: HelpDocumentWidget.cpp  HelpDocumentWidget.hpp  LanguageManager.cpp  LanguageManager.hpp  LightTheme.cpp  LightTheme.hpp  MainWindow.cpp  MainWindow.hpp  NodeLibraryListWidget.cpp  NodeLibraryListWidget.hpp  RunPreviewWidget.cpp  RunPreviewWidget.hpp  WorkbenchTabWidget.cpp  WorkbenchTabWidget.hpp
ai-workflow-editor/src/domain/: PortDataTypes.hpp  WorkflowNodeDefinition.cpp  WorkflowNodeDefinition.hpp
ai-workflow-editor/src/export/: WorkflowExporter.cpp  WorkflowExporter.hpp
ai-workflow-editor/src/i18n/: ai_workflow_editor_zh_CN.ts
ai-workflow-editor/src/inspector/: InspectorFieldSchema.cpp  InspectorFieldSchema.hpp  InspectorPanel.cpp  InspectorPanel.hpp
ai-workflow-editor/src/qtnodes/: CanvasMiniMapWidget.cpp  CanvasMiniMapWidget.hpp  EdgeAlignedNodeGeometry.cpp  EdgeAlignedNodeGeometry.hpp  QtNodesEditorWidget.cpp  QtNodesEditorWidget.hpp  StaticNodeData.hpp  StaticNodeDelegateModel.cpp  StaticNodeDelegateModel.hpp  StyledNodePainter.cpp  StyledNodePainter.hpp  UndoCommands.cpp  UndoCommands.hpp  WorkflowGraphModel.cpp  WorkflowGraphModel.hpp
ai-workflow-editor/src/registry/: BuiltInNodeRegistry.cpp  BuiltInNodeRegistry.hpp
ai-workflow-editor/src/resources/: app_theme.qrc
ai-workflow-editor/src/resources/styles/: workbench.qss
ai-workflow-editor/src/runtime/: WorkflowRunner.cpp  WorkflowRunner.hpp
ai-workflow-editor/src/workflow/: WorkflowDocument.cpp  WorkflowDocument.hpp
ai-workflow-editor/tests/: CMakeLists.txt
ai-workflow-editor/tests/app/: LightThemeTests.cpp  MainWindowTests.cpp  NodeLibraryListWidgetTests.cpp
ai-workflow-editor/tests/domain/: BuiltInNodeRegistryTests.cpp
ai-workflow-editor/tests/export/: WorkflowExporterTests.cpp
ai-workflow-editor/tests/runtime/: WorkflowRunnerTests.cpp
ai-workflow-editor/tests/workflow/: WorkflowDocumentTests.cpp
